argocd/infra/node-problem-detector/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-problem-detector
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - node-problem-detector
  ingress: []
  egress:
    - toCIDR:
        - 192.168.10.0/24
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
